# kinoko7danmaku

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  build.bat  build.ps1  config.example.toml  kinoko7danmaku.spec  pyproject.toml  requirements.txt  start.bat
.github/workflows/: pyinstaller.yml
resource/qss/dark/: main_window.qss
resource/qss/light/: main_window.qss
src/: audio_player.py  bili_service.py  config.py  custom_typing.py  danmaku_client.py  danmaku_handler.py  event_handler.py  format.py  gradio_client.py  gui.py  main.py  pydantic_gradio_builder.py  webui.py
src/bilibili/: __init__.py  bili_service.py  gift_merger.py  model.py
src/config/: qconfig.py  setting.py
src/core/: __init__.py  const.py  player.py  qconfig.py  setting.py  update_checker.py  version.py
src/gui/: __init__.py  icons.py
src/gui/components/: __init__.py  alias_dict_card.py  audio_upload_widget.py  danmaku_control_card.py  dict_edit_card.py  float_range_setting_card.py  home_panel.py  int_setting_card.py  login_panel.py  message_display_card.py  readonly_info_card.py  single_audio_upload_widget.py  str_setting_card.py  user_info_card.py
src/gui/view/: __init__.py  audio_test.py  danmaku_control_card.py  login_panel.py  main.py  settings.py
src/gui/view/minimax/: __init__.py  home.py  voice_clone.py  voice_list.py
src/gui/window/: main.py  settings.py
src/models/: bilibili.py  device.py  minimax.py  service.py
src/player/: __init__.py  stream_player.py
src/schema/: bilibili.py  const.py
src/tts_service/: __init__.py  base.py  fish_speech.py  gpt_sovits.py  minimax.py  piper.py
